new jpg file has been added.

--- a/Survival-Present.ipynb
+++ b/Survival-Present.ipynb
@@ -1512,7 +1512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Modeling"
+    "### Inference"
    ]
   },
   {
